# atspi

./: .gitignore  AtspiItemsGir.txt  Cargo.toml  Gir-not_bound.txt  Gir.toml  README.md  expanded.txt  vendor.md
atspi-sys/: Cargo.toml  Gir.toml  README.md  build.rs  versions.txt
atspi-sys/src/: PostGirFixes.txt  lib.rs  timeval.rs  timevalue.rs
atspi-sys/tests/: abi.rs  constant.c  layout.c
compare/: Atspi-2.0.gir-20.04  delta.diff
gir-files-20.04/: GLib-2.0.gir
gir-files-20.10/: Atspi-2.0.gir  GLib-2.0.gir
src/: device_listener.rs  event.rs  key_set.rs  lib.rs  oldevent.rs.bck  other.rs  prelude.rs  rect.rs  state_set.rs
src/auto/: accessible.rs  action.rs  alias.rs  application.rs  collection.rs  component.rs  device_event.rs  device_listener.rs  document.rs  editable_text.rs  enums.rs  event.rs  event_listener.rs  flags.rs  hyperlink.rs  hypertext.rs  image.rs  key_definition.rs  key_set.rs  match_rule.rs  mod.rs  object.rs  point.rs  range.rs  rect.rs  relation.rs  selection.rs  state_set.rs  table.rs  table_cell.rs  text.rs  text_range.rs  value.rs  versions.txt
