[package]
name = "atspi"
version = "0.1.2"
keywords = ["accessibility", "a11y", "ffi"]
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]


[dependencies]
libc = "0.2.84"
bitflags = "1.2.1"
ffi = { package = "atspi-sys", path = "atspi-sys" }
glib = { git = "https://github.com/gtk-rs/gtk-rs.git" } 
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs.git" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs.git" }

[dev-dependencies]
gir-format-check = "0.1.1"
