[package]
name = "atspi-sys"
version = "0.0.1"
links = "atspi"
edition = "2018"
keywords = ["libatspi", "accessibility", "a11y"]
build = "build.rs"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.atspi_2]
name = "atspi-2"
version = "2.28"

[package.metadata.system-deps.atspi_2.v2_38]
version = "2.38"

[package.metadata.system-deps.atspi_2.v2_34]
version = "2.34"

[lib]
name = "atspi_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs.git"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs.git"

[build-dependencies]
pkg-config = "0.3.19"
system-deps = "2.0.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3.2.0"

[features]
dox = []
v2_34 = []
v2_38 = []
